monitor/prometheus/svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: kube-system
spec:
  ports:
  - port: 9090
  selector:
    app: prometheus
