monitor/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: prom-k8s.vkingcloud.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
  - host: prom-k8s.vkingcloud.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
